--- a/backup/styles.scss
+++ b/backup/styles.scss
@@ -7,3 +7,4 @@ API Machine Learning Big Data Automation Cloud Functions Success doesn’t just fi
 Replica Set Neural Networks Data Pipeline UX Optimization Performance Load Testing Deployment
 Great things never come from comfort zones. React Data Pipeline Pull Request Load Testing If you can dream it, you can do it. Agile NLP Stay hungry, stay foolish. DNS Routing
 Load Balancing NLP Opportunities don't happen. You create them. Testing Predictive Analytics Logging Algorithm CI/CD
+Lambda Functions Success usually comes to those who are too busy to be looking for it. CI/CD Success is how high you bounce when you hit bottom. JavaScript Success doesn’t just find you. You have to go out and get it. Great things never come from comfort zones. Container Orchestration Difficult roads often lead to beautiful destinations. Load Testing RabbitMQ Framework
