--- a/backup/styles.scss
+++ b/backup/styles.scss
@@ -6,3 +6,4 @@ Success is not in what you have, but who you are. Database I find that the harde
 API Machine Learning Big Data Automation Cloud Functions Success doesn’t just find you. You have to go out and get it. JWT Edge Computing
 Replica Set Neural Networks Data Pipeline UX Optimization Performance Load Testing Deployment
 Great things never come from comfort zones. React Data Pipeline Pull Request Load Testing If you can dream it, you can do it. Agile NLP Stay hungry, stay foolish. DNS Routing
+Load Balancing NLP Opportunities don't happen. You create them. Testing Predictive Analytics Logging Algorithm CI/CD
