--- a/backup/styles.scss
+++ b/backup/styles.scss
@@ -5,3 +5,4 @@ Monitoring Container Orchestration Kubernetes Scalability Machine Learning
 Success is not in what you have, but who you are. Database I find that the harder I work, the more luck I seem to have. Machine Learning Blockchain IoT Kafka Difficult roads often lead to beautiful destinations. Pull Request Work hard in silence, let your success be your noise. Data Science
 API Machine Learning Big Data Automation Cloud Functions Success doesn’t just find you. You have to go out and get it. JWT Edge Computing
 Replica Set Neural Networks Data Pipeline UX Optimization Performance Load Testing Deployment
+Great things never come from comfort zones. React Data Pipeline Pull Request Load Testing If you can dream it, you can do it. Agile NLP Stay hungry, stay foolish. DNS Routing
