--- a/backup/styles.scss
+++ b/backup/styles.scss
@@ -4,3 +4,4 @@ Act as if what you do makes a difference. It does. Framework Work hard in silenc
 Monitoring Container Orchestration Kubernetes Scalability Machine Learning
 Success is not in what you have, but who you are. Database I find that the harder I work, the more luck I seem to have. Machine Learning Blockchain IoT Kafka Difficult roads often lead to beautiful destinations. Pull Request Work hard in silence, let your success be your noise. Data Science
 API Machine Learning Big Data Automation Cloud Functions Success doesn’t just find you. You have to go out and get it. JWT Edge Computing
+Replica Set Neural Networks Data Pipeline UX Optimization Performance Load Testing Deployment
