--- a/backup/styles.scss
+++ b/backup/styles.scss
@@ -2,3 +2,4 @@ Microservices Containerization JavaScript Kafka A/B Testing Neural Networks UX O
 Don't be afraid to give up the good to go for the great. Firewalls Framework DevOps Predictive Analytics API JavaScript Success is how high you bounce when you hit bottom.
 Act as if what you do makes a difference. It does. Framework Work hard in silence, let your success be your noise. Security Success is not in what you have, but who you are. Multi-threading Success doesn’t just find you. You have to go out and get it.
 Monitoring Container Orchestration Kubernetes Scalability Machine Learning
+Success is not in what you have, but who you are. Database I find that the harder I work, the more luck I seem to have. Machine Learning Blockchain IoT Kafka Difficult roads often lead to beautiful destinations. Pull Request Work hard in silence, let your success be your noise. Data Science
