--- a/backup/styles.scss
+++ b/backup/styles.scss
@@ -1,1 +1,2 @@
 Microservices Containerization JavaScript Kafka A/B Testing Neural Networks UX Optimization Frontend Work hard in silence, let your success be your noise.
+Don't be afraid to give up the good to go for the great. Firewalls Framework DevOps Predictive Analytics API JavaScript Success is how high you bounce when you hit bottom.
